added basic bot functionality

--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,5 @@
-# secrets go here
-TMI_TOKEN=oauth:yadayada
-CLIENT_ID=put0your0id0here0nerds
-BOT_NICK=
-BOT_PREFIX=!
-CHANNEL=
+TMI_TOKEN=oauth:this_comes_from_twitch
+CLIENT_ID=this_comes_from_twitch_as_well
+BOT_NICK=your_channel_name(e.g: giladsher)
+BOT_PREFIX=! (what messages should the bot listen to)
+CHANNEL=giladsher (private message sent to this user when the bot initializes)
